generated/checkers/gen/AllGen-UAF-aec8e6bf839101784f3ef037dcdb9432c3f32343/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::MemRegion* {anonymous}::SAGenTestChecker::getObjectBaseRegionFromExpr(const clang::Expr*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:150:3: error: ‘MemoryRegionManager’ was not declared in this scope
  150 |   MemoryRegionManager &MRMgr = C.getSValBuilder().getRegionManager();
      |   ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:150:24: error: ‘MRMgr’ was not declared in this scope
  150 |   MemoryRegionManager &MRMgr = C.getSValBuilder().getRegionManager();
      |                        ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::MemRegion* {anonymous}::SAGenTestChecker::buildFieldRegion(const clang::ento::MemRegion*, const clang::FieldDecl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:176:3: error: ‘MemoryRegionManager’ was not declared in this scope
  176 |   MemoryRegionManager &MRMgr = C.getSValBuilder().getRegionManager();
      |   ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:176:24: error: ‘MRMgr’ was not declared in this scope
  176 |   MemoryRegionManager &MRMgr = C.getSValBuilder().getRegionManager();
      |                        ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportUseInCondition(const clang::ento::MemRegion*, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:223:55: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  223 |   if (const Stmt *RelSite = State->get<ReleaseSiteMap>(FieldReg)) {
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                                       |
      |                                                       clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportUseInCall(const clang::ento::MemRegion*, const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:243:55: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  243 |   if (const Stmt *RelSite = State->get<ReleaseSiteMap>(FieldReg)) {
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                                       |
      |                                                       clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportNotClearedAtReturn(const clang::ento::MemRegion*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:261:55: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  261 |   if (const Stmt *RelSite = State->get<ReleaseSiteMap>(FieldReg)) {
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                                       |
      |                                                       clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:295:9: error: ‘MemoryRegionManager’ was not declared in this scope
  295 |         MemoryRegionManager &MRMgr = C.getSValBuilder().getRegionManager();
      |         ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:295:30: error: ‘MRMgr’ was not declared in this scope
  295 |         MemoryRegionManager &MRMgr = C.getSValBuilder().getRegionManager();
      |                              ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:335:60: error: ‘const class clang::Stmt’ has no member named ‘IgnoreParenCasts’
  335 |   const auto *BO = dyn_cast_or_null<BinaryOperator>(S ? S->IgnoreParenCasts() : nullptr);
      |                                                            ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:389:24: error: ‘const class clang::ento::ProgramState’ has no member named ‘begin’
  389 |   for (auto I = State->begin<ReleasedFieldSet>(), E = State->end<ReleasedFieldSet>(); I != E; ++I) {
      |                        ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:389:46: error: expected primary-expression before ‘>’ token
  389 |   for (auto I = State->begin<ReleasedFieldSet>(), E = State->end<ReleasedFieldSet>(); I != E; ++I) {
      |                                              ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:389:48: error: expected primary-expression before ‘)’ token
  389 |   for (auto I = State->begin<ReleasedFieldSet>(), E = State->end<ReleasedFieldSet>(); I != E; ++I) {
      |                                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:389:92: error: ‘E’ was not declared in this scope
  389 |   for (auto I = State->begin<ReleasedFieldSet>(), E = State->end<ReleasedFieldSet>(); I != E; ++I) {
      |                                                                                            ^
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
